--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <section>
         <h2>My Projects</h2>
-        <ul>
-            <li><a href="https://github.com/oppie100/my-python-project" target="_blank">My Python Project</a></li>
-            <li><a href="https://github.com/oppie100/raspberry-pi-projects" target="_blank">Another Project</a></li>
-        </ul>
+        <div class="button-container">
+            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">My Python Project</a>
+            <a href="https://github.com/oppie100/raspberry-pi-projects" class="project-button" target="_blank">Raspberry Pi Project</a>
+        </div>
     </section>
 
     <section>
