--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Oppie100 Portfolio</title>
+    <title>Oppie100's Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
-        <p>I'm Oppie100 – Python enthusiast, Raspberry Pi builder, and tech creator.</p>
+        <nav>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About Me</a>
+        </nav>
     </header>
-
-    <section>
-        <h2>About Me</h2>
-        <p>I love coding in Python and building cool projects with Raspberry Pi. Here's where I showcase my work and certifications.</p>
-    </section>
 
     <section>
         <h2>My Projects</h2>
         <div class="button-container">
-            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">My Python Project</a>
-            <a href="https://github.com/oppie100/raspberry-pi-projects" class="project-button" target="_blank">Raspberry Pi Project</a>
+            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">🐍 My Python Project</a>
+            <a href="https://github.com/oppie100/raspberry-pi-projects" class="project-button" target="_blank">🍓 Raspberry Pi Project</a>
         </div>
     </section>
 
     <section>
-        <h2>Project Videos</h2>
+        <h2>Videos</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
     </section>
 
     <section>
-        <h2>My CV & Certifications</h2>
-        <a href="cv.pdf" download class="button">Download My CV</a>
+        <h2>Download My CV</h2>
+        <a href="cv.pdf" class="project-button" download>📄 Download CV</a>
     </section>
 
     <footer>
