--- a/about.html
+++ b/about.html
@@ -1,20 +1,30 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>About Me - Oppie100</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>About Me</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a> |
-    <a href="about.html">About Me</a>
-  </nav>
+    <header>
+        <h1>About Me</h1>
+        <nav>
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="about.html" class="nav-link">About Me</a>
+        </nav>
+    </header>
 
-  <section>
-    <h1>About Me</h1>
-    <p>Hi! I'm Oppie100. I build Raspberry Pi projects and code with Python. I love learning and creating tech stuff!</p>
-  </section>
+    <section>
+        <p>Hi! I'm Oppie100. I build cool projects using Python and Raspberry Pi. I love learning and sharing what I create. Below are my diplomas and skills:</p>
+        <ul>
+            <li>💻 Python Basics</li>
+            <li>🔧 Raspberry Pi Projects</li>
+            <li>📜 Certificates in Programming</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 Oppie100</p>
+    </footer>
 </body>
 </html>
