--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
         <h2>My Projects</h2>
         <div class="button-container">
-            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">🐍 My Python Project</a>
+            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">🐍 U+1F40D My Python Project</a>
             <a href="https://github.com/oppie100/raspberry-pi-projects" class="project-button" target="_blank">🍓 Raspberry Pi Project</a>
         </div>
     </section>
