--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="index.html" class="nav-link">Home</a>
             <a href="about.html" class="nav-link">About Me</a>
+            <a href="projects.html" class="nav-link">Projects</a>
         </nav>
     </header>
 
