--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Oppie100's Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Home - Oppie100</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-        <nav>
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About Me</a>
-        </nav>
-    </header>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <a href="index.html" class="nav-link active">Home</a> |
+      <a href="about.html" class="nav-link">About Me</a> |
+      <a href="projects.html" class="nav-link">Projects</a>
+    </nav>
+  </header>
 
-    <section>
-        <h2>My Projects</h2>
-        <div class="button-container">
-            <a href="https://github.com/oppie100/my-python-project" class="project-button" target="_blank">🐍 My Python Project</a>
-            <a href="https://github.com/oppie100/raspberry-pi-projects" class="project-button" target="_blank">🍓 Raspberry Pi Project</a>
-        </div>
-    </section>
+  <section>
+    <h2>Introduction</h2>
+    <p>This is my personal website where I share my CV, projects, and diplomas.</p>
+  </section>
 
     <section>
         <h2>Videos</h2>
