--- a/about.html
+++ b/about.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>About Me</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Me - Oppie100</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>About Me</h1>
-        <nav>
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="about.html" class="nav-link">About Me</a>
-            <a href="projects.html" class="nav-link">Projects</a>
-        </nav>
-    </header>
+  <header>
+    <h1>About Me</h1>
+    <nav>
+      <a href="index.html" class="nav-link">Home</a> |
+      <a href="about.html" class="nav-link active">About Me</a> |
+      <a href="projects.html" class="nav-link">Projects</a>
+    </nav>
+  </header>
 
-    <section>
-        <p>Hi! I'm Oppie100. I build cool projects using Python and Raspberry Pi. I love learning and sharing what I create. Below are my diplomas and skills:</p>
-        <ul>
-            <li>💻 Python Basics</li>
-            <li>🔧 Raspberry Pi Projects</li>
-            <li>📜 Certificates in Programming</li>
-        </ul>
-    </section>
+  <section>
+    <h2>About Me</h2>
+    <p>Write a little about yourself here. Your background, skills, and interests.</p>
+  </section>
 
-    <footer>
-        <p>© 2025 Oppie100</p>
-    </footer>
+  <footer>
+    <p>© 2025 Oppie100</p>
+  </footer>
 </body>
 </html>
