--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
     </section>
 
-    <section>
-        <h2>Download My CV</h2>
-        <a href="cv.pdf" class="project-button" download>📄 Download CV</a>
+ <section>
+  <h2>My CV</h2>
+  <a href="cv.pdf" class="project-button" target="_blank">📄 View CV</a>
+  <a href="cv.pdf" class="project-button" download>⬇️ Download CV</a>
+</section>
+
+
     </section>
 
     <footer>
