--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
   </section>
 
   <section>
-    <h2>My CV</h2>
-    <a href="cv.pdf" class="icon-button" target="_blank">
+     <h2>My CV</h2>
+    <a href="cv.pdf" class="paper-button" target="_blank">
       <span>📄</span> View CV
     </a>
-    <a href="cv.pdf" class="icon-button" download>
-      <span>⬇️</span> Download CV
+    <a href="cv.pdf" class="paper-button" download>
+      <span>📎</span> Download CV
     </a>
-  </section>
+   </section>
 
   <footer>
     <p>© 2025 Oppie100</p>
