--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
       <a href="index.html" class="nav-link">Home</a> |
       <a href="about.html" class="nav-link active">About Me</a> |
       <a href="projects.html" class="nav-link">Projects</a>
+      <a href="game.html" class="nav-link">🎮 Game</a>
     </nav>
   </header>
 
