--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <a href="index.html" class="nav-link active">Home</a> |
       <a href="about.html" class="nav-link">About Me</a> |
       <a href="projects.html" class="nav-link">Projects</a>
+      <a href="game.html" class="nav-link">🎮 Game</a>
     </nav>
   </header>
 
