--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,8 @@
       <a href="index.html" class="nav-link">Home</a> |
       <a href="about.html" class="nav-link">About Me</a> |
       <a href="projects.html" class="nav-link active">Projects</a>
+      <a href="game.html" class="nav-link">🎮 Game</a>
+      
     </nav>
   </header>
 
