--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+  
+<!-- Explore Button -->
+<a href="#" class="explore-button" onclick="toggleMenu()">🚀 Explore</a>
+
+  
 <body>
   <div class="hero">
     <div class="overlay">
