--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <!-- Explore Button -->
 <a href="#" class="explore-button" onclick="toggleMenu()">🚀 Explore</a>
 
-  
+ <div class="sidebar" id="sidebar">
+  <span class="close-btn" onclick="toggleMenu()">✖</span>
+  <h2>Menu</h2>
+  <a href="index.html">🏠 Home</a>
+  <a href="about.html">👤 About Me</a>
+  <a href="projects.html">💡 Projects</a>
+  <a href="cv.pdf" target="_blank">📄 My CV</a>
+</div>
+ 
 <body>
   <div class="hero">
     <div class="overlay">
