--- a/index.html
+++ b/index.html
@@ -2,45 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Johan Opperman</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Home - Oppie100</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-  
-<!-- Explore Button -->
-<a href="#" class="explore-button" onclick="toggleMenu()">🚀 Explore</a>
-
- <div class="sidebar" id="sidebar">
-  <span class="close-btn" onclick="toggleMenu()">✖</span>
-  <h2>Menu</h2>
-  <a href="index.html">🏠 Home</a>
-  <a href="about.html">👤 About Me</a>
-  <a href="projects.html">💡 Projects</a>
-  <a href="cv.pdf" target="_blank">📄 My CV</a>
-</div>
- 
 <body>
-  <div class="hero">
-    <div class="overlay">
-      <h1>Hello, I'm Johan</h1>
-      <p>Tech Enthusiast | Developer | Maker</p>
-    </div>
-    <a class="explore-button" onclick="toggleMenu()">☰ Explore</a>
-  </div>
 
-  <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
-    <a href="about.html">About Me</a>
-    <a href="projects.html">Projects</a>
-    <a href="videos.html">Videos</a>
-    <a href="cv.html">CV</a>
-    <a href="contact.html">Contact</a>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Welcome to My Website</h1>
+      <button class="explore-button" onclick="toggleMenu()">Explore</button>
+    </div>
+  </section>
+
+  <!-- Sidebar Menu -->
+  <div class="sidebar" id="sidebar">
+    <span class="close-btn" onclick="toggleMenu()">✖</span>
+    <h2>Menu</h2>
+    <a href="index.html">🏠 Home</a>
+    <a href="about.html">👤 About Me</a>
+    <a href="projects.html">💡 Projects</a>
+    <a href="cv.pdf" target="_blank">📄 My CV</a>
   </div>
 
   <script>
     function toggleMenu() {
-      document.getElementById("sidebar").classList.toggle("active");
+      const sidebar = document.getElementById('sidebar');
+      sidebar.classList.toggle('open');
     }
   </script>
+
 </body>
 </html>
+
