--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Hello, I'm Johan</h1>
       <p>Tech Enthusiast | Developer | Maker</p>
     </div>
-    <a class="explore-button" onclick="toggleMenu()">☰ Explore</a>
+    <a class="explore-button" onclick="toggleMenu()">☰</a>
   </div>
 
   <div id="sidebar" class="sidebar">
@@ -31,5 +31,3 @@
   </script>
 </body>
 </html>
-
-
