--- a/index.html
+++ b/index.html
@@ -3,31 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Johan Opperman</title>
+  <title>Welcome - Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="hero">
     <div class="overlay">
-      <h1>Hello, I'm Johan</h1>
-      <p>Tech Enthusiast | Developer | Maker</p>
+      <h1>Hi, I'm Johan</h1>
+      <p>Welcome to my personal site</p>
+      <a href="home.html" class="enter-button">Enter Site</a>
     </div>
-    <a class="explore-button" onclick="toggleMenu()">☰</a>
   </div>
-
-  <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
-    <a href="about.html">About Me</a>
-    <a href="projects.html">Projects</a>
-    <a href="videos.html">Videos</a>
-    <a href="cv.html">CV</a>
-    <a href="contact.html">Contact</a>
-  </div>
-
-  <script>
-    function toggleMenu() {
-      document.getElementById("sidebar").classList.toggle("active");
-    }
-  </script>
 </body>
 </html>
