--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Hero Section -->
   <div class="hero">
     <div class="overlay">
-      <h1>Hello, I'm Johan</h1>
+      <h1>Johan Opperman</h1>
       <p>Tech Enthusiast | Developer | Maker</p>
     </div>
-    <a class="explore-button" onclick="toggleMenu()">☰ Explore</a>
+    <div class="top-right">
+      <button class="menu-btn" onclick="toggleSidebar()">☰</button>
+    </div>
   </div>
 
+  <!-- Sidebar Menu -->
   <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About Me</a>
     <a href="projects.html">Projects</a>
     <a href="videos.html">Videos</a>
@@ -24,8 +28,9 @@
     <a href="contact.html">Contact</a>
   </div>
 
+  <!-- Sidebar Toggle Script -->
   <script>
-    function toggleMenu() {
+    function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
   </script>
