--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div class="hero">
-    <button class="explore-button" onclick="toggleMenu()">☰ Explore</button>
-    <div class="hero-text">
+    <div class="overlay">
       <h1>Hello, I'm Johan</h1>
       <p>Tech Enthusiast | Developer | Maker</p>
     </div>
+    <a class="explore-button" onclick="toggleMenu()">☰ Explore</a>
   </div>
 
   <div id="sidebar" class="sidebar">
