--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="hero">
-    <div class="overlay">
-      <h1>Hello, I'm Johan</h1>
-      <p>Tech Enthusiast | Developer | Maker</p>
-    </div>
-    <a class="explore-button" onclick="toggleMenu()">☰ Explore</a>
-  </div>
-
+  <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
-    <a href="about.html">About Me</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
+    <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
-    <a href="videos.html">Videos</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
+  <!-- Hero Section -->
+  <div class="hero">
+    <div class="hero-content">
+      <h1>Johan Opperman</h1>
+      <p>Tech Enthusiast • Developer • Creator</p>
+    </div>
+    <a class="explore-button" onclick="toggleSidebar()">☰ Explore</a>
+  </div>
+
   <script>
-    function toggleMenu() {
+    function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
   </script>
