--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="toggleMenu()">&times;</a>
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="cv.html">CV</a>
