--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
+  <!-- Floating Chat Icon -->
+<div class="chatbot-icon" onclick="toggleAIChat()">🤖</div>
+
+<!-- Chatbot Window -->
+<div class="chatbot-box" id="chatbotBox">
+  <div class="chatbot-header">
+    Ask Me Anything
+    <span class="close-chatbot" onclick="toggleAIChat()">×</span>
+  </div>
+  <div class="chatbot-body" id="chatbotMessages">
+    <div class="bot-msg">Hi! I can answer questions about Johan's CV 💼</div>
+  </div>
+  <input
+    type="text"
+    id="chatbotInput"
+    placeholder="Type your question..."
+    onkeydown="handleBotInput(event)"
+  />
+</div>
+
   
 <body>
   <!-- Sidebar -->
