--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <!-- Sidebar -->
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
+    <div class="status-message">⚠️ Currently unavailable but will get back to you soon!</div>
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href="cv.html">CV</a>
