--- a/index.html
+++ b/index.html
@@ -23,88 +23,31 @@
       <h1>Johan Opperman</h1>
       <p>Tech Enthusiast • Developer • Creator</p>
     </div>
-    <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
+    <a class="explore-button" onclick="toggleSidebar()">☰ Explore</a>
   </div>
 
-  <!-- Chat Icon -->
-  <div class="chat-launcher" onclick="toggleChat()">💬</div>
-
-  <!-- Chat Box -->
-  <div class="chat-container" id="chatContainer">
-    <div class="chat-header">
-      Chat with Johan
-      <span class="close-chat" onclick="toggleChat()">×</span>
-    </div>
-    <div class="chat-content" id="chatContent">
-      <div class="bot-message">Hi! 👋 Ask me anything about Johan’s CV or projects.</div>
-    </div>
-    <input
-      type="text"
-      id="chatInput"
-      placeholder="Type your message..."
-      onkeydown="handleChatInput(event)"
-    />
-  </div>
-
-  <!-- Scripts -->
+  <!-- Sidebar Toggle Script -->
   <script>
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
-
-    function toggleChat() {
-      const chat = document.getElementById("chatContainer");
-      chat.classList.toggle("open");
-
-      if (chat.classList.contains("open")) {
-        const chatContent = document.getElementById("chatContent");
-
-        // Prevent duplicate auto-status message
-        if (!document.querySelector(".bot-message.auto-status")) {
-          const autoMessage = document.createElement("div");
-          autoMessage.className = "bot-message auto-status";
-          autoMessage.textContent = "⚠️ I'm currently unavailable but will get back to you soon!";
-
-          chatContent.prepend(autoMessage);
-          chatContent.scrollTop = 0;
-        }
-      }
-    }
-
-    function handleChatInput(event) {
-      if (event.key === "Enter") {
-        const input = document.getElementById("chatInput");
-        const message = input.value.trim();
-        if (!message) return;
-
-        const chatContent = document.getElementById("chatContent");
-        chatContent.innerHTML += `<div class="user-message">${message}</div>`;
-        input.value = "";
-
-        setTimeout(() => {
-          chatContent.innerHTML += `<div class="bot-message">I'm checking that for you 🤖</div>`;
-          chatContent.scrollTop = chatContent.scrollHeight;
-        }, 800);
-      }
-    }
   </script>
 
-</body>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/6853f8072da696190ad84e18/1iu401o40';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 
- <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6853f8072da696190ad84e18/1iu401o40';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
- 
+</body>
 </html>
 
 
