--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
   </script>
 
-  <!--Start of Tawk.to Script-->
+  <!-- Tawk.to Chat Script -->
   <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
     (function () {
@@ -45,9 +45,9 @@
       s0.parentNode.insertBefore(s1, s0);
     })();
   </script>
-  <!--End of Tawk.to Script-->
 
 </body>
 </html>
+
 
 
