--- a/index.html
+++ b/index.html
@@ -26,24 +26,21 @@
     <a class="explore-button" onclick="toggleSidebar()">☰ Explore</a>
   </div>
 
+  <!-- WhatsApp Floating Chat Button -->
+  <a
+    href="https://wa.me/yourphonenumber"
+    class="whatsapp-chat"
+    target="_blank"
+    title="Chat on WhatsApp"
+  >
+    💬
+  </a>
+
   <!-- Sidebar Toggle Script -->
   <script>
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
-  </script>
-
-  <!-- Tawk.to Chat Script -->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/6853f8072da696190ad84e18/1iu401o40';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
   </script>
 
 </body>
