--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- WhatsApp Floating Chat Button -->
   <a
-    href="https://wa.me/yourphonenumber"
+    href="https://wa.me/27799231887"
     class="whatsapp-chat"
     target="_blank"
     title="Chat on WhatsApp"
