--- a/index.html
+++ b/index.html
@@ -23,28 +23,20 @@
       <h1>Johan Opperman</h1>
       <p>Tech Enthusiast • Developer • Creator</p>
     </div>
-    <a class="explore-button" onclick="toggleSidebar()">☰ Explore</a>
+    <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- WhatsApp Floating Chat Button -->
-  <a
-    href="https://wa.me/27799231887"
-    class="whatsapp-chat"
-    target="_blank"
-    title="Chat on WhatsApp"
-  >
-    💬
-  </a>
+  <!-- WhatsApp Chat Icon -->
+  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
+     target="_blank" 
+     class="chat-launcher" 
+     title="Chat with me on WhatsApp">💬</a>
 
-  <!-- Sidebar Toggle Script -->
   <script>
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
   </script>
-
+  
 </body>
 </html>
-
-
-
