--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- WhatsApp Chat Icon -->
  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV."
    target="_blank"
-   class="whatsapp-float"
+   class="whatsapp-button"
    title="Chat with me on WhatsApp">
    <img src="https://img.icons8.com/ios-filled/50/00f2fe/whatsapp--v1.png" alt="WhatsApp Icon" />
 </a>
