--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Johan Opperman</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -26,19 +26,19 @@
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- WhatsApp Chat Icon -->
- <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV."
-   target="_blank"
-   class="whatsapp-button"
-   title="Chat with me on WhatsApp">
-   <img src="https://img.icons8.com/ios-filled/50/00f2fe/whatsapp--v1.png" alt="WhatsApp Icon" />
-</a>
+  <!-- WhatsApp Floating Button -->
+  <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
+     target="_blank" 
+     class="whatsapp-button" 
+     title="Chat with me on WhatsApp">
+    <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp Icon" />
+  </a>
 
   <script>
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
     }
   </script>
-  
+
 </body>
 </html>
