--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
     <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
+    <a href="#projects">Projects</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
@@ -25,6 +25,20 @@
     </div>
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
+
+  <!-- Projects Section -->
+  <section id="projects" style="padding: 20px;">
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        <strong>Raspberry Pi Pico Projects</strong> —  
+        <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
+          View on GitHub
+        </a>
+      </li>
+      <!-- Add more projects here later -->
+    </ul>
+  </section>
 
   <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
