--- a/index.html
+++ b/index.html
@@ -4,68 +4,123 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Johan Opperman</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
-    /* Sidebar submenu styles */
-    .submenu {
-      overflow: hidden;
-      max-height: 0;
-      transition: max-height 0.3s ease-out;
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: white;
     }
 
-    .submenu a {
+    /* Left Sidebar (Explore) */
+    .sidebar {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+      background-color: #222;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+      z-index: 1000;
+    }
+
+    .sidebar.active {
+      width: 250px;
+    }
+
+    /* Right Sidebar (Projects) */
+    .projects-panel {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      top: 0;
+      right: 0;
+      background-color: #333;
+      overflow-x: hidden;
+      transition: 0.3s;
+      padding-top: 60px;
+      z-index: 1001;
+    }
+
+    .projects-panel.active {
+      width: 250px;
+    }
+
+    .sidebar a, .projects-panel a {
       display: block;
-      padding: 8px 0 8px 15px;
-      color: #ddd;
-      font-size: 0.9em;
+      padding: 12px 20px;
+      color: #ccc;
       text-decoration: none;
     }
 
-    .submenu a:hover {
+    .sidebar a:hover, .projects-panel a:hover {
+      color: white;
+    }
+
+    .closebtn {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 30px;
       color: #fff;
-    }
-
-    .submenu-toggle {
       cursor: pointer;
-      user-select: none;
     }
 
-    .submenu.open {
-      max-height: 500px; /* large enough to fit all submenu items */
-      transition: max-height 0.5s ease-in;
+    .hero {
+      text-align: center;
+      padding-top: 20vh;
+    }
+
+    .explore-button {
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25d366;
+      border-radius: 50%;
+      padding: 10px;
+      z-index: 9999;
+    }
+
+    .whatsapp-button img {
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Sidebar -->
+  <!-- LEFT SIDEBAR (Explore) -->
   <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="toggleSidebar()">&times;</a>
+    <span class="closebtn" onclick="toggleSidebar()">&times;</span>
     <a href="about.html">About</a>
-
-    <!-- Projects submenu -->
-    <a href="javascript:void(0)" class="submenu-toggle" onclick="toggleSubmenu()">Projects &#9662;</a>
-    <div id="projects-submenu" class="submenu">
-      <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank" rel="noopener noreferrer">
-        Raspberry Pi Pico Projects
-      </a>
-      <!-- Add more links if needed -->
-    </div>
-
+    <a href="javascript:void(0);" onclick="toggleProjects()">Projects ➤</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- Hero Section -->
+  <!-- RIGHT SIDEBAR (Projects) -->
+  <div id="projectsPanel" class="projects-panel">
+    <span class="closebtn" onclick="toggleProjects()">&times;</span>
+    <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank">Raspberry Pi Pico Projects</a>
+    <!-- Add more project links here -->
+  </div>
+
+  <!-- HERO SECTION -->
   <div class="hero">
-    <div class="hero-content">
-      <h1>Johan Opperman</h1>
-      <p>Tech Enthusiast • Developer • Creator</p>
-    </div>
+    <h1>Johan Opperman</h1>
+    <p>Tech Enthusiast • Developer • Creator</p>
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- WhatsApp Floating Button -->
+  <!-- WHATSAPP BUTTON -->
   <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
      target="_blank" 
      class="whatsapp-button" 
@@ -78,13 +133,13 @@
       document.getElementById("sidebar").classList.toggle("active");
     }
 
-    function toggleSubmenu() {
-      const submenu = document.getElementById("projects-submenu");
-      submenu.classList.toggle("open");
+    function toggleProjects() {
+      document.getElementById("projectsPanel").classList.toggle("active");
     }
   </script>
 
 </body>
 </html>
+
 
 
