--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: white;
     }
 
-    /* Left Sidebar (Explore) */
+    /* Sidebar (left) */
     .sidebar {
       height: 100%;
       width: 0;
@@ -30,7 +30,7 @@
       width: 250px;
     }
 
-    /* Right Sidebar (Projects) */
+    /* Projects panel (right) */
     .projects-panel {
       height: 100%;
       width: 0;
@@ -48,14 +48,16 @@
       width: 250px;
     }
 
-    .sidebar a, .projects-panel a {
+    .sidebar a,
+    .projects-panel a {
       display: block;
       padding: 12px 20px;
       color: #ccc;
       text-decoration: none;
     }
 
-    .sidebar a:hover, .projects-panel a:hover {
+    .sidebar a:hover,
+    .projects-panel a:hover {
       color: white;
     }
 
@@ -64,13 +66,13 @@
       top: 10px;
       right: 20px;
       font-size: 30px;
-      color: #fff;
+      color: white;
       cursor: pointer;
     }
 
     .hero {
       text-align: center;
-      padding-top: 20vh;
+      padding-top: 25vh;
     }
 
     .explore-button {
@@ -97,30 +99,30 @@
 </head>
 <body>
 
-  <!-- LEFT SIDEBAR (Explore) -->
+  <!-- Explore Sidebar -->
   <div id="sidebar" class="sidebar">
     <span class="closebtn" onclick="toggleSidebar()">&times;</span>
+    <a href="javascript:void(0)" onclick="toggleProjects()">Projects ➤</a>
     <a href="about.html">About</a>
-    <a href="javascript:void(0);" onclick="toggleProjects()">Projects ➤</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- RIGHT SIDEBAR (Projects) -->
+  <!-- Projects Sidebar -->
   <div id="projectsPanel" class="projects-panel">
     <span class="closebtn" onclick="toggleProjects()">&times;</span>
     <a href="https://github.com/Oppie100/Raspberry-Pi-Pico-Projects" target="_blank">Raspberry Pi Pico Projects</a>
     <!-- Add more project links here -->
   </div>
 
-  <!-- HERO SECTION -->
+  <!-- Hero Section -->
   <div class="hero">
     <h1>Johan Opperman</h1>
     <p>Tech Enthusiast • Developer • Creator</p>
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
   </div>
 
-  <!-- WHATSAPP BUTTON -->
+  <!-- WhatsApp Button -->
   <a href="https://wa.me/27799231887?text=Hi%20Johan!%20I%20have%20a%20question%20about%20your%20CV." 
      target="_blank" 
      class="whatsapp-button" 
@@ -128,6 +130,7 @@
     <img src="https://img.icons8.com/ios-filled/50/ffffff/whatsapp--v1.png" alt="WhatsApp Icon" />
   </a>
 
+  <!-- JavaScript -->
   <script>
     function toggleSidebar() {
       document.getElementById("sidebar").classList.toggle("active");
