--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: white;
     }
 
-    /* Sidebar (left) */
+    /* Sidebar: Explore (left) */
     .sidebar {
       height: 100%;
       width: 0;
@@ -30,7 +30,7 @@
       width: 250px;
     }
 
-    /* Projects panel (right) */
+    /* Sidebar: Projects (right) */
     .projects-panel {
       height: 100%;
       width: 0;
@@ -64,10 +64,17 @@
     .closebtn {
       position: absolute;
       top: 10px;
-      right: 20px;
       font-size: 30px;
       color: white;
       cursor: pointer;
+    }
+
+    .sidebar .closebtn {
+      right: 20px;
+    }
+
+    .projects-panel .closebtn {
+      left: 20px;
     }
 
     .hero {
@@ -75,7 +82,9 @@
       padding-top: 25vh;
     }
 
-    .explore-button {
+    .explore-button,
+    .projects-button {
+      margin: 10px;
       padding: 10px 20px;
       font-size: 18px;
       cursor: pointer;
@@ -102,7 +111,6 @@
   <!-- Explore Sidebar -->
   <div id="sidebar" class="sidebar">
     <span class="closebtn" onclick="toggleSidebar()">&times;</span>
-    <a href="javascript:void(0)" onclick="toggleProjects()">Projects ➤</a>
     <a href="about.html">About</a>
     <a href="cv.html">CV</a>
     <a href="contact.html">Contact</a>
@@ -120,6 +128,7 @@
     <h1>Johan Opperman</h1>
     <p>Tech Enthusiast • Developer • Creator</p>
     <button class="explore-button" onclick="toggleSidebar()">☰ Explore</button>
+    <button class="projects-button" onclick="toggleProjects()">📁 Projects</button>
   </div>
 
   <!-- WhatsApp Button -->
@@ -143,6 +152,5 @@
 
 </body>
 </html>
-
 
 
